src/objects/Project_Item__c.object
<CustomObject>
    <description>BME - An Open Item represents issues, risks, deliverables or action items. Team members can create action item records as the outcome of meetings and daily interactions. Issues  and risks can similarly be captured, allowing project management to maintain an Issue Log and Risk Log.</description>
    <fields>
        <fullName>Area_Impacted__c</fullName>
        <description>Text field to describe the area impacted by the issue/risk/action item/ decision.</description>
        <label>Area(s) Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>System Usable - May Require Additional &quot;Clicks&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Usable - May Require External Solutions(e.g. Excel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Usable - May Require Manual Maintenance Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System cannot be used by impacted teams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Quality Implications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption and Org Readiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date field used to track when the Project Item has been Closed or Resolved</description>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <description>Field to track the complexity of the Action Item</description>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Governance_Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Governance Escalation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Detailed Description of the Issue/Risk/Action Item/ Decision</description>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalate To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE_Hours__c</fullName>
        <description>Estimated Level of Effort in hours to complete the Action Item</description>
        <label>Estimated LOE(Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Resolution__c</fullName>
        <description>Final Resolution for an Issue/Risk</description>
        <label>Final Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <description>Detailed Description of the impact of the Issue/Risk</description>
        <label>Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership Escalation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_of_Impact__c</fullName>
        <label>Level of Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <description>Field to track the Meeting in which the Project Item was raised</description>
        <inlineHelpText>Meeting or Source in which the Project Item was raised</inlineHelpText>
        <label>Meeting/Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Field used to track next steps after a decision has been made</description>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMO_Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PMO Escalation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_Completed__c</fullName>
        <description>Tracks the % of work completed on an Action Item</description>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Field to track the Priority of the Project Item</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipName>Issue_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>Project_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Options__c</fullName>
        <description>Field to list the various resolution options available to mitigate the issue/risk</description>
        <label>Resolution Options</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Action__c</fullName>
        <label>Risk Action</label>
        <picklist>
            <picklistValues>
                <fullName>Avoidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Probability__c</fullName>
        <description>Field to track probability of the risk to occur</description>
        <label>Risk Probability</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_s__c</fullName>
        <description>Field to track the secondary owners of the Project Item</description>
        <inlineHelpText>Enter names of additional owners</inlineHelpText>
        <label>Secondary Owner(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Governance_Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Governance Escalation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <description>Field to track progress updates of the action item</description>
        <label>Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <inlineHelpText>Person or Team who logged the Project Item</inlineHelpText>
        <label>Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>Open_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Users_impacted__c</fullName>
        <description>Field used to track the number of users impacted</description>
        <inlineHelpText>Enter the number of users impacted or a group size</inlineHelpText>
        <label># of Users Impacted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Item</label>
    <nameField>
        <displayFormat>ITEM-{00000}</displayFormat>
        <label>Project Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Use this record type to track all the to-do items/tasks.</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decision</fullName>
        <active>true</active>
        <description>Use this record type to track all the key decisions taken.</description>
        <label>Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Use this record type to track all the issues raised.</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Use this record type to document all the risks and mitigating actions.</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Final_Resolution_reqd_for_Resolved_Item</fullName>
        <active>true</active>
        <description>This Validation rule displays an error when the status is set to resolved but Final Resolution is not entered.</description>
        <errorConditionFormula>NOT($RecordType.Name = &quot;Action Item&quot;) &amp;&amp;  NOT( ISPICKVAL(PRIORVALUE( Status__c), &quot;Resolved&quot;)) &amp;&amp; (ISPICKVAL( Status__c, &quot;Resolved&quot;)) &amp;&amp; ISBLANK(Final_Resolution__c )</errorConditionFormula>
        <errorMessage>Final Resolution is required when the status is set to Resolved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_Down</fullName>
        <active>true</active>
        <description>Project Item Record will be locked down from editing once the Status is Closed or Resolved or Approved</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c), &quot;Closed&quot;) || ISPICKVAL(PRIORVALUE( Status__c), &quot;Approved&quot;) || ISPICKVAL(PRIORVALUE( Status__c), &quot;Resolved&quot;)</errorConditionFormula>
        <errorMessage>The Project Item cannot be edited as it is in a terminal status</errorMessage>
    </validationRules>
</CustomObject>